# ekcx-web

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  worker.py
app/domain/: results.json  results.py  results.sqlite
conf/etc/nginx/sites-available/: ekcx
conf/etc/systemd/system/: ekcx.service
scripts/: generate_results_json.py  generate_standings_2025.py  update_round_details.py
static/: index.html  standings.html
static/style/: style.css  style_bak.css
templates/: bettshangerparkchallenges.html  event_detail.html  events.html  faq.html  footer.html  forum.html  head.html  header.html  home.html  info.html  media.html  nav.html  privacy.html  rules.html  standings.html
templates/standings/: mens.html  u12.html  v50.html  womens.html
templates/standings/2023/: mens.html  u12.html  v40.html  womens.html  youth.html
templates/standings/2024/: mens.html  teams.html  u12.html  v40.html  v50.html  womens.html  youth.html
templates/standings/2025/: mens.html  teams.html  u12.html  v40.html  v50.html  womens.html  youth.html
tests/: test_generate_standings.py
