[project]
name = "ekcx-web"
version = "0.1.0"
description = "East Kent Cyclocross website"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.26.0",
    "gunicorn>=21.2.0",
    "jinja2>=3.1.3",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
]
